@@ -61,6 +61,7 @@
 <a class="cmdnav" target="body" href="Sin.html">Sin</a>
 <a class="cmdnav" target="body" href="Size.html">Size</a>
 <a class="cmdnav" target="body" href="Sound.html">Sound</a>
+<a class="cmdnav" target="body" href="Stamp.html">Stamp</a>
 <a class="cmdnav" target="body" href="String.html">String</a>
 <a class="cmdnav" target="body" href="Tan.html">Tan</a>
 <a class="cmdnav" target="body" href="Text.html">Text</a>
